<resources>
    <string name="app_name">Movie DB</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back">Back</string>
    <string name="genres">Genres</string>
    <string name="rating">Rating</string>
    <string name="status">Status</string>
    <string name="release_date">Release Date</string>
    <string name="trailer">Trailer</string>
    <string name="error_yt_player">Video player failed!</string>
    <string name="review">Review</string>
</resources>