<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="movie"
            type="com.mypro.moviedb.data.model.Movie" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.movie_detail.MovieDetailFragment">

            <ImageView
                android:id="@+id/img_backdrop"
                android:layout_width="0dp"
                android:layout_height="160dp"
                android:contentDescription="@{movie.title}"
                android:scaleType="centerCrop"
                app:imageUrl="@{movie.backdrop}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/avatars" />

            <ImageButton
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:background="?selectableItemBackgroundBorderless"
                android:contentDescription="@string/back"
                android:padding="8dp"
                android:src="@drawable/ic_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/white" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img"
                android:layout_width="120dp"
                android:layout_height="120dp"
                app:imageUrl="@{movie.image}"
                app:layout_constraintBottom_toBottomOf="@id/img_backdrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/img_backdrop"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/tv_title"
                style="@style/TextView.Medium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@{movie.title}"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/img"
                tools:text="Avatar" />

            <TextView
                android:id="@+id/tv_overview"
                style="@style/TextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:textColor="@color/grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_title"
                tools:text="Professor Albus Dumbledore knows the powerful, dark wizard Gellert Grindelwald is moving to seize control of the wizarding world. Unable to stop him alone, he entrusts magizoologist Newt Scamander to lead an intrepid team of wizards and witches. They soon encounter an array of old and new beasts as they clash with Grindelwald's growing legion of followers" />

            <TextView
                android:id="@+id/tv_rating_title"
                style="@style/TextView.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/rating"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_overview" />

            <TextView
                android:id="@+id/tv_rating"
                style="@style/TextView.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="@{String.valueOf(movie.rating)}"
                android:textColor="@color/yellow_900"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_rating_title"
                tools:text="6.6" />

            <TextView
                android:id="@+id/tv_status_title"
                style="@style/TextView.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:text="@string/status"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_rating_title" />

            <TextView
                android:id="@+id/tv_status"
                style="@style/TextView.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="@{movie.status}"
                android:textColor="@color/green"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_status_title"
                tools:text="Released" />

            <TextView
                android:id="@+id/tv_release_date_title"
                style="@style/TextView.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:text="@string/release_date"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_status_title" />

            <TextView
                android:id="@+id/tv_release_date"
                style="@style/TextView.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="@{movie.releaseDate}"
                android:textColor="@color/blue_700"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_release_date_title"
                tools:text="2022-01-01" />

            <View
                android:id="@+id/line"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="8dp"
                android:background="@color/line"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_release_date_title" />

            <TextView
                android:id="@+id/tv_trailer"
                style="@style/TextView.Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/trailer"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_release_date_title" />

            <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                android:id="@+id/yt_player"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_trailer" />


            <TextView
                android:id="@+id/tv_review"
                style="@style/TextView.Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/review"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/yt_player" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_review"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_review" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>


</layout>